--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <h2>through the eyes of the camera</h2>
 <ul>
 	<li><a href="">animals/people</a></li>
-	<li><a href="file:///home/ewsguest502/Desktop/website/flowers.html">flowers</a></li>
-	<li><a href="file:///home/ewsguest502/Desktop/website/landscapes.html">landscapes</a></li>
-	<li><a href="file:///home/ewsguest502/Desktop/website/architecture.html">architecture</a></li>
-	<li><a href="file:///home/ewsguest502/Desktop/website/cooking.html">cooking</a></li>
+	<li><a href="flowers.html">flowers</a></li>
+	<li><a href="landscapes.html">landscapes</a></li>
+	<li><a href="architecture.html">architecture</a></li>
+	<li><a href="cooking.html">cooking</a></li>
 	<li><a href="">other</a></li>
 </ul>
 </body>
