--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <h1>A Picture Every Day</h1>
 <h2>through the eyes of the camera</h2>
 <ul>
-	<li><a href="">animals/people</a></li>
+	<li><a href="animalspeople.html">animals/people</a></li>
 	<li><a href="flowers.html">flowers</a></li>
 	<li><a href="landscapes.html">landscapes</a></li>
 	<li><a href="architecture.html">architecture</a></li>
 	<li><a href="cooking.html">cooking</a></li>
-	<li><a href="">other</a></li>
+	<li><a href="other.html">other</a></li>
 </ul>
 </body>
 </html>
